--- a/joinpink.css
+++ b/joinpink.css
@@ -1,7 +1,8 @@
 body {
-    background-color: #dcdcdc;
     margin: 0;
 }
+
+/* navigation bar*/
 
 header {
     background-color: #F85797;
@@ -16,6 +17,7 @@ a {
     color: #000000;
 }
 
+
 .text_bar {
     display: flex;
     justify-content: center;
@@ -23,9 +25,61 @@ a {
     flex-wrap: nowrap;
 }
 
+/* image*/
 .top_image {
     width: 100%;
     height: 350px;
     object-fit: cover;
     object-position: 40% 50%;
+}
+
+/* text on imgae*/
+.text_image {
+    padding: min(4em, 6%);
+    background-color: hsla(0, 6%, 17%, 0.535);
+    color: white;
+    width: 17rem;
+    position: relative;
+    bottom: 10rem;
+    left: 40%;
+    text-transform: uppercase;
+    width: 200px;
+    height: 30px;
+    border-radius: 16px;
+    text-align: center;
+}
+
+.apply_container {
+    max-width: 700px;
+    margin: 0 auto;
+    background-color: #dcdcdc;
+    padding: 40px;
+
+}
+
+.apply_form {
+    text-transform: capitalize;
+    padding: 10px;
+    margin-left: 20px;
+}
+
+input {
+    width: 241px;
+    height: 30px;
+}
+
+.apply {
+    border-radius: 8px;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: bold;
+    width: 70px;
+    height: 30px;
+    margin: 10px;
+}
+
+button {
+    background-color: #F85797;
+    color: #000000;
+
 }
