--- a/homepage.css
+++ b/homepage.css
@@ -4,6 +4,7 @@ body {
     background-color: #EBB3C5;
     display: flex;
     flex-direction: column;
+    height: 100vh;
 
 }
 
@@ -51,7 +52,7 @@ header a {
 }
 
 .first_introduction {
-    /* for bigger and small screen*/
+    /* text on image on top, for bigger and small screen*/
     padding: min(4em, 6%);
     color: white;
     width: 17rem;
