--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,3 +12,13 @@ body {
     color: #000000;
     font-family: "DM Serif Text", serif;
 }
+
+/* page name */
+h1 {
+    font-family: "Pirata One", system-ui;
+    font-weight: 400;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    font-style: normal;
+    color: #007559;
+}
