--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,6 +7,8 @@
 
 body {
     min-height: 100vh;
+    max-width: 100vh;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     color: #000000;
@@ -128,6 +130,7 @@ h1 {
 
 .adventure>h3 {
     text-transform: capitalize;
+    margin-left: 20px;
 
 }
 
@@ -144,6 +147,7 @@ h3 {
     align-content: center;
 }
 
+/*
 .sub-list {
     background-color: hsl(167, 20%, 51%);
     width: 23rem;
@@ -154,13 +158,103 @@ h3 {
     margin-right: 20px;
     border-radius: 10px;
     align-content: center;
+}*/
+
+/* list to do */
+.list-container {
+    width: 100%;
 }
 
-.sub-list>h3,
-p {
-    display: flex;
+/* secede mountain font*/
+.fa-mountain {
+    color: #808080;
+}
+
+.list-seceda {
+    background-color: #007c88;
+    width: 20rem;
+    height: 10rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 25px;
+    margin-right: 25px;
+    border-radius: 10px;
     align-content: center;
 }
+
+.list-seceda>h3 {
+    text-transform: capitalize;
+}
+
+.list-seceda>h3,
+p {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+/* Lago Di Braise */
+.fa-water {
+    color: rgb(35, 137, 218);
+}
+
+.list-lagi-di-braise {
+    background-color: #255826;
+    width: 20rem;
+    height: 10rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 25px;
+    margin-right: 25px;
+    border-radius: 10px;
+    align-content: center;
+
+}
+
+/* Cortina D'ampezzo */
+.list-cortina {
+    background-color: #75b877;
+    width: 20rem;
+    height: 10rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 25px;
+    margin-right: 25px;
+    border-radius: 10px;
+    align-content: center;
+}
+
+.fa-city {
+    color: rgb(187, 137, 102);
+}
+
+/* The cime di lavado */
+.list-lavaredo {
+    background-color: #2c4d2d;
+    width: 20rem;
+    height: 10rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 25px;
+    margin-right: 25px;
+    border-radius: 10px;
+    align-content: center;
+}
+
+.fa-tree {
+    color: #91901a;
+}
+
+/* section content headings*/
+.bottom-space>h3 {
+    padding-bottom: 10px;
+    margin-left: 60px;
+}
+
+.bottom-space>h5 {
+    margin-left: 22px;
+    margin-bottom: 5px;
+}
+
 
 
 /* media 768px tablets and larger */
