--- a/src/css/main.css
+++ b/src/css/main.css
@@ -226,7 +226,7 @@ p {
     color: rgb(187, 137, 102);
 }
 
-/* The cime di lavado */
+/* Tre cime di lavado */
 .list-lavaredo {
     background-color: #2c4d2d;
     width: 20rem;
@@ -237,10 +237,30 @@ p {
     margin-right: 25px;
     border-radius: 10px;
     align-content: center;
+    text-transform: capitalize;
 }
 
 .fa-tree {
     color: #91901a;
+}
+
+/* Cadini di misurina */
+.fa-person-hiking {
+    box-shadow: 5px 5px 4px;
+    border-radius: 4px;
+}
+
+.list-cadini {
+    background-color: rgb(132, 153, 79);
+    width: 20rem;
+    height: 10rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 25px;
+    margin-right: 25px;
+    border-radius: 10px;
+    align-content: center;
+    text-transform: capitalize;
 }
 
 /* section content headings*/
@@ -262,7 +282,7 @@ p {
         min-height: 40vh;
     }
 
-    /* change font size according to screen sizes*/
+    /* h1 on intro image, change font size according to screen sizes*/
     h1 {
         font-size: calc(1.305rem + 4.2vw);
     }
