--- a/src/css/main.css
+++ b/src/css/main.css
@@ -274,6 +274,7 @@ footer>ul {
     list-style-type: none;
 }
 
+/* footer fonts */
 .fa-square-youtube {
     color: #ff0000;
     font-size: 35px;
@@ -291,17 +292,112 @@ footer>ul {
     margin-top: 10px;
 }
 
-/* feedback form */
+/* feedback form body */
 #form-background {
     /* body background*/
     background-image: url("../img/pexels-eberhardgross-1386993.jpg");
     background-size: cover;
     background-position: center;
+    color: #ffffff;
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.feedback-header {
+    margin-left: 50%;
+}
+
+.feedback-header ul {
+    list-style-type: none;
+}
+
+fieldset {
+    padding-left: 6px;
+    padding-right: 6px;
+    border: 4px solid #ffffff;
+    border-radius: 5px;
 
 }
 
-#main-form {}
+/* h5 in form */
+.user-infor h5 {
+    font-size: large;
+    padding-bottom: 40px;
+    text-align: center;
+    height: 70px;
+    padding-bottom: 30px;
+    background-color: rgba(61, 98, 167, 0.307);
+    border-radius: 3px;
+    padding-top: 4px;
+
+}
+
+/* heart font */
+.user-infor i {
+    color: #ff0000;
+    font-size: 30px;
+}
+
+.input-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+/* input */
+.input-container input {
+    background-color: #00000048;
+    padding: 6px;
+    margin-bottom: 10px;
+    color: #ffffff;
+    border-radius: 9px;
+    border: 3px solid #ffffff;
+    margin-top: 5px;
+    font-size: medium;
+    text-align: center;
+}
+
+.input-container label {
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    font-size: x-large;
+}
+
+/* text area */
+textarea {
+    width: 100%;
+    height: 80px;
+    padding: 6px;
+    border: 4px solid #ffffff;
+    background-color: rgb(246, 240, 229);
+}
+
+/* submit feedback */
+.user-feeback-message {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+/* submit input*/
+.user-feeback-message input {
+    width: 7rem;
+    height: 2.5rem;
+    align-self: center;
+    border-radius: 9px;
+    text-transform: capitalize;
+    border: 3px solid white;
+    font-size: large;
+    background-color: #00000048;
+    font-weight: bold;
+    color: #ffffff;
+
+}
 
 /* media 768px tablets and larger */
 @media (min-width: 768px) {
@@ -319,6 +415,4 @@ footer>ul {
 
 
     }
-
-    .list-end {}
 }
